ODE CHANGELOG
-------------

the rules for this file:
  * entries are sorted newest-first.
  * summarize sets of changes - dont reproduce every CVS log comment here.
  * don't ever delete anything.
  * keep the format consistent (79 char width, M/D/Y date format).

------------------------------------------------------------------------------
02/19/2017 Oleh Derevenko
        * dWorldStep threaded implementation has been extended to the final 
          steps of constraint force applications and body position updates
          after the LCP solving. Note that body callbacks (if set) may be
          called from multiple threads if threaded execution is enabled.
        * OU atomicord32 type has been fixed to be unsigned on all supported
          platforms.

01/09/2017 Oleh Derevenko
        * dGeomTriMeshDataPreprocess2() public function has been added to 
          replace dGeomTriMeshDataPreprocess(). Face angles pre-computation
          for triangle meshes has been implemented.

11/13/2016 Oleh Derevenko
        * dGeomTriMeshDataGetBuff and dGeomTriMeshDataSetBuff have been marked 
          deprecated and their functionality implemented via 
          dGeomTriMeshDataGet and dGeomTriMeshDataSet. Extra function variant
          dGeomTriMeshDataGet2() has been added to allow returning data size.

11/07/2016 Oleh Derevenko
        * The implementation of OPCODE TriMesh data pre-processing 
          (dGeomTriMeshDataPreprocess()) has been optimized to only contain
          a sort and a single pass over edges (used to be a sort and O(N^2)).

10/29/2016 Oleh Derevenko
        * dGeomTriMeshDataPreprocess() public function has been changed to 
          return a boolean status (it can fail in low memory conditions).

07/10/2016 Oleh Derevenko
        * The correct handling of dJOINT_REVERSE mode for AngularMotor Joint 
          implemented (issue #37).

06/29/2016 Oleh Derevenko
        * A bug fixed with HashSpace calling big boxes collision twice 